--- a/trunk/ pi-webserver/.cproject
+++ b/trunk/ pi-webserver/.cproject
@@ -116,19 +116,10 @@
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.cygwin.exe.debug.2090228252;cdt.managedbuild.config.gnu.cygwin.exe.debug.2090228252.;cdt.managedbuild.tool.gnu.c.compiler.cygwin.exe.debug.960646595;cdt.managedbuild.tool.gnu.c.compiler.input.cygwin.1587839387">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCWinManagedMakePerProjectProfileC"/>
-			<profile id="org.eclipse.cdt.managedbuilder.core.GCCWinManagedMakePerProjectProfileC">
-				<buildOutputProvider>
-					<openAction enabled="true" filePath=""/>
-					<parser enabled="true"/>
-				</buildOutputProvider>
-				<scannerInfoProvider id="specsFile">
-					<runAction arguments="-std=gnu99 -c 'gcc -E -P -v -dD &quot;${plugin_state_location}/specs.c&quot;'" command="sh" useDefault="true"/>
-					<parser enabled="true"/>
-				</scannerInfoProvider>
-			</profile>
 		</scannerConfigBuildInfo>
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.cygwin.exe.release.1243872525;cdt.managedbuild.config.gnu.cygwin.exe.release.1243872525.;cdt.managedbuild.tool.gnu.c.compiler.cygwin.exe.release.1622157605;cdt.managedbuild.tool.gnu.c.compiler.input.cygwin.866696922">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCWinManagedMakePerProjectProfileC"/>
 		</scannerConfigBuildInfo>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
